# kadepayd

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: build.yml
protos/kadepay/v1/services/: invoice.proto  wallet.proto
protos/kadepay/v1/services/invoice/: invoice.proto
scripts/: pre-commit
src/: lib.rs  main.rs
src/core/: mod.rs
src/core/arkade/: addresses.rs  ark_client.rs  mod.rs
src/core/bitcoin/: addresses.rs
src/data/: config.rs  errors.rs  mod.rs  storage.rs
src/server/: config.rs  engine.rs
src/services/: invoice_service.rs  mod.rs  wallet_service.rs
tests/: ark_client_test.rs  arkade_addresses_test.rs  bitcoin_addresses_test.rs  invoice_service_test.rs  wallet_service_test.rs
tests/http/: ping.http
tests/requests/grpc/: create_wallet.http  get_invoices.http
tests/requests/grpc/arkade/: create_invoice.http
tests/requests/grpc/bitcoin/: create_invoice.http
