[package]
name = "kadepayd"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52.1", features = ["full"] }
tokio-postgres = "0.7.17"
bb8 = "0.9.1"
bb8-postgres = "0.9.0"
native-tls = "0.2.18"
postgres-native-tls = "0.5.3"
tonic = "0.14.6"
prost = "0.14.3"
tonic-prost = "0.14.6"


[build-dependencies]
tonic-prost-build = "0.14.6"
