[package]
name = "kadepayd"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"

[dependencies]
tokio = { version = "1.52.1", features = ["full"] }
tokio-postgres = { version = "0.7.17", features = ["with-chrono-0_4", "with-uuid-1"] }
bb8 = "0.9.1"
bb8-postgres = "0.9.0"
native-tls = "0.2.18"
rustls = "0.23.41"
postgres-native-tls = "0.5.3"
tonic = "0.14.6"
prost = "0.14.3"
tonic-prost = "0.14.6"
serde = "1.0.228"
serde_json = "1.0.149"
chrono = { version = "0.4.44", features = ["serde"] }
rust_decimal = { version = "1.42.0", features = ["tokio-pg"] }
uuid = "1.23.1"
postgresql_embedded = "0.20.2"
bitcoin = "0.32.10"
ark-core = "0.9.3"
ark-grpc = "0.9.3"
hex = "0.4.3"

[build-dependencies]
tonic-prost-build = "0.14.6"
